# C_Bank_Project

./: CMakeLists.txt  bankFlow.txt  data.csv  main.c
executable/: crypt.txt  data.csv
include/: bankHandle.c  bankHandle.h  encrypt_decrypt.c  encrypt_decrypt.h  utils.c  utils.h
